fix: change padding on .TableListRow__Input to prevent shadow overflow

--- a/src/components/TableList/TableList.sass
+++ b/src/components/TableList/TableList.sass
@@ -132,7 +132,7 @@
 
 			&.TableListRow__Input,
 			&:global(.TableListRow__Input)
-				padding: 0
+				padding: 0 2px
 
 			&.TableListRow__SeparatorRight,
 			&:global(.TableListRow__SeparatorRight)
